<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">永恒音乐播放器</string>
    <string name="act_name">TimelessMusicPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="last">上一首</string>
    <string name="next">下一首</string>
    <string name="time">00:00</string>
    <string name="singer">timeless</string>
    <string name="title">memory</string>
    <string name="songname">memory</string>
    <string name="welcome">欢迎使用永恒音乐播放器~~</string>
</resources>
