<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:id="@+id/RelativeLayout1"  
    android:layout_width="match_parent"  
    android:layout_height="50.0dp"  
    android:orientation="vertical" >  
  
    <ImageView  
        android:id="@+id/albumImage"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_alignParentLeft="true"  
        android:layout_alignParentTop="true"  
        android:src="@drawable/music2" />  
  
    <TextView  
        android:id="@+id/music_duration"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_alignParentRight="true"  
        android:layout_alignParentTop="true"  
        android:layout_marginRight="5.0dp"  
        android:textColor="@android:color/white"  
        android:text="@string/time" />  
  
    <TextView  
        android:id="@+id/music_title"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_alignParentTop="true"  
        android:layout_marginLeft="5dp"  
        android:layout_toRightOf="@+id/albumImage"  
        android:textColor="@android:color/white"  
        android:text="@string/title" />  
  
    <TextView  
        android:id="@+id/music_Artist"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_alignLeft="@+id/music_title"  
        android:layout_below="@id/music_title"  
        android:textColor="@android:color/white"  
        android:text="@string/singer" />  
  
</RelativeLayout>  