<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <ViewFlipper
          android:id="@+id/viewFlipper1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" 
          android:layout_weight="7">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            >
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:text="@string/welcome" /> 
                  <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/divider_color"  
                android:dividerHeight="1dp">
            </ListView>                  
           </LinearLayout>
        
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <com.example.timelessmusicplayer.LrcView
                android:id="@+id/lrcShowView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"          
                android:layout_gravity="center" />
            </LinearLayout>
              
    </ViewFlipper>
    
           <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1" >
             <TextView
                android:textColor="@android:color/white"
                android:id="@+id/songname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"            
                android:gravity="center"             
                android:text="@string/songname" />
             <SeekBar
             android:id="@+id/seekBar1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
                android:id="@+id/startprogress"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/time" />
             <TextView
                android:textColor="@android:color/white"
                android:id="@+id/endprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/time" />
            </LinearLayout>
             <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <ImageButton
             android:id="@+id/last"
             android:background="#00000000" 
             android:src="@drawable/last" 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             />
             <ImageButton
             android:id="@+id/play"
             android:background="#00000000"  
             android:focusable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             />
             <ImageButton
             android:id="@+id/next"
             android:background="#00000000" 
             android:src="@drawable/next" 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             />
             </LinearLayout>
          </LinearLayout>

</LinearLayout>